# RL2.ModLoader.WebSite

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  mod.html  mods.html
.github/ISSUE_TEMPLATE/: add-a-new-mod-to-the-page.md
mods/: Burdens+.html  Cursed-Gambling.html  Keep-The-Heir.html  RL2.API.html  index.html  template.html
src/: api.rs  api_v1.rs  api_v2.rs  app.rs  main.rs  pages.rs
static/: api_v1.html  api_v2.html  index.html
styles/: api.css  common.css  links.css  main.css  mod.css  mods.css  shared.css
templates/: api_homepage.html  api_v2.html  mod.html  mods.html
